--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Singup_Activity">
+    >
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".View.Singup_Activity"
+        tools:context=".View.Fragment.Singup_Activity"
         android:orientation="vertical">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp">
+            android:layout_height="wrap_content">
 
             <Button
                 android:layout_width="20dp"
@@ -35,7 +34,7 @@
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="24dp"
                 android:textSize="20dp"
-                android:text="Address"
+                android:text="Sign up"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -46,15 +45,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="56dp"
-                android:text="Make sure it's valid"
+                android:text=" Register and eat"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <Button
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:text="Add Photo"
+            android:textColor="@color/silver"
+            android:background="@drawable/layer"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone No."
+            android:text="Full name"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginStart="17dp"
@@ -64,7 +71,7 @@
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
-            android:hint="Type your phone number"
+            android:hint="Type your full name"
             android:padding="10dp"
             android:textColorHint="@color/silver"
             android:background="@drawable/border"
@@ -72,7 +79,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Address"
+            android:text="Email Address"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginStart="17dp"
@@ -82,7 +89,7 @@
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
-            android:hint="Type your adderss"
+            android:hint="Type your email adderss"
             android:padding="10dp"
             android:textColorHint="@color/silver"
             android:background="@drawable/border"
@@ -90,7 +97,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="House No."
+            android:text="Password"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             android:layout_marginStart="17dp"
@@ -100,29 +107,11 @@
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
-            android:hint="Type your house number"
+            android:hint="Type your password"
             android:padding="10dp"
             android:textColorHint="@color/silver"
             android:background="@drawable/border"
             />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="City"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="17dp"
-            android:layout_marginBottom="10dp"
-            />
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_gravity="center"
-            android:layout_width="400dp"
-            android:background="@drawable/border"
-            android:layout_height="40dp" />
-
-
         <Button
             android:id="@+id/button"
             android:layout_width="400dp"
@@ -132,7 +121,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="46dp"
             android:background="@drawable/button_login"
-            android:text="Sign Up Now"
+            android:text="Continue"
             android:textColor="@color/white"
             />
         <LinearLayout
@@ -161,7 +150,6 @@
                 android:textColor="@color/orange"
                 android:layout_gravity="center"
                 tools:ignore="MissingConstraints" />
-
         </LinearLayout>
 
     </LinearLayout>
