--- a/app/src/main/res/layout/fragment_sing_up_success.xml
+++ b/app/src/main/res/layout/fragment_sing_up_success.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.SignUpComplete_Activity">
+    tools:context=".View.Fragment.SignUpComplete_Activity">
 
     <ImageView
         android:id="@+id/imageView3"
