--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="silver">#C0C0C0</color>
     <color name="orange">#FF6600</color>
     <color name="fb_gg">#FFCCCC</color>
     <color name="silver_1">#EEEEEE</color>
+    <color name="white1">#F8F8F8</color>
 </resources>
