--- a/app/src/main/res/layout/food_item_under.xml
+++ b/app/src/main/res/layout/food_item_under.xml
@@ -2,44 +2,54 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="70dp"
+    android:layout_marginStart="20dp"
+
+    android:layout_marginTop="14dp">
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/imageViewUnder"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/border_imageview"
+        android:clipToOutline="true"
+
+        />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/foodName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="8dp"
         android:text="Food name"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/imageViewUnder"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/foodId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="14dp"
         android:layout_marginBottom="16dp"
         android:text="Id"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView5" />
+        app:layout_constraintStart_toEndOf="@+id/imageViewUnder" />
 
     <RatingBar
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-
-        android:layout_marginStart="160dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView12"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        android:layout_marginStart="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/foodId"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageViewUnder"
+        app:layout_constraintTop_toBottomOf="@+id/foodName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
