--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/homeFragment">
 
@@ -19,7 +20,11 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.myapplication.View.Fragment.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_foodDetailFragment2"
+            app:destination="@id/foodDetailFragment2" />
+    </fragment>
 
     <fragment
         android:id="@+id/loginFragment"
@@ -52,5 +57,17 @@
         <action
             android:id="@+id/action_singUpSuccessFragment_to_homeFragment2"
             app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/foodDetailFragment2"
+        android:name="com.example.myapplication.View.Fragment.FoodDetailFragment"
+        android:label="fragment_food_detail"
+        tools:layout="@layout/fragment_food_detail" >
+        <action
+            android:id="@+id/action_foodDetailFragment2_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <argument
+            android:name="food"
+            app:argType="com.example.myapplication.model.Food"/>
     </fragment>
 </navigation>
