--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".View.Fragment.Singup_Activity">
+    android:layout_height="match_parent">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -61,6 +60,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtPhone"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -79,6 +79,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtAddress"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -97,6 +98,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtHouse"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -124,12 +126,13 @@
 
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSignUpNow"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="46dp"
             android:layout_marginTop="24dp"
             android:layout_gravity="center"
+            android:inputType="text|textEmailAddress"
             android:layout_marginEnd="46dp"
             android:background="@drawable/button_login"
             android:text="Sign Up Now"
