--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:id="@+id/btnBack"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginStart="24dp"
@@ -68,6 +69,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtName"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -86,6 +88,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtEmail"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -104,6 +107,7 @@
             android:layout_marginBottom="10dp"
             />
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:layout_height="40dp"
@@ -113,7 +117,7 @@
             android:background="@drawable/border"
             />
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnContinue"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="46dp"
@@ -121,6 +125,7 @@
             android:layout_gravity="center"
             android:layout_marginEnd="46dp"
             android:background="@drawable/button_login"
+            android:inputType="text|textEmailAddress"
             android:text="Continue"
             android:textColor="@color/white"
             />
