--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -157,7 +157,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnGoogle"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
