--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -118,7 +118,7 @@
             android:layout_marginBottom="10dp"
             />
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinnerAddress"
             android:layout_gravity="center"
             android:layout_width="400dp"
             android:background="@drawable/border"
