--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -98,7 +98,7 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/btnSingIn"
+            android:id="@+id/btnSignIn"
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="46dp"
@@ -124,7 +124,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnSingIn"
+            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
             app:layout_constraintVertical_bias="0.232"
             tools:ignore="MissingConstraints" />
 
