fix email login bug

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -146,13 +146,15 @@
             android:id="@+id/button2"
             android:layout_width="160dp"
             android:layout_height="50dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="12dp"
             android:background="@drawable/button_google_fb"
             android:drawableLeft="@drawable/facebook"
-            android:paddingLeft="10dp"
             android:inputType="text|textEmailAddress"
+            android:paddingLeft="10dp"
             android:text="Facebook"
+            app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -161,10 +163,10 @@
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="50dp"
-            android:inputType="text|textEmailAddress"
+            android:layout_marginEnd="40dp"
             android:background="@drawable/button_google_fb"
             android:drawableLeft="@drawable/google"
+            android:inputType="text|textEmailAddress"
             android:paddingLeft="10dp"
             android:text="Google"
             app:layout_constraintEnd_toEndOf="parent"
