--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -50,15 +48,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <Button
+
+        <ImageButton
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:text="Add Photo"
-            android:textColor="@color/silver"
-            android:background="@drawable/layer"
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
-            />
+            android:background="@drawable/layer"
+            android:text="Add Photo"
+            android:src="@drawable/order"
+            android:textColor="@color/silver" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
