--- a/app/src/main/res/layout/fragment_sing_up_success.xml
+++ b/app/src/main/res/layout/fragment_sing_up_success.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnFindFood"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
