Edit variable name

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     >
     <LinearLayout
-        android:id="@+id/main"
+        android:id="@+id/mainLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".View.Fragment.Singup_Activity"
