--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="fb_gg">#FFCCCC</color>
     <color name="silver_1">#EEEEEE</color>
     <color name="white1">#F8F8F8</color>
+    <color name="green">#06AB8D</color>
+    <color name="primaryColor">#DE4619</color>
+    <color name="yellow">#ffc000</color>
+    <color name="colorDivider">#E6E6E6</color>
+    <color name="black_200">#222222</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="pink">#F88379</color>
+    <color name="red">#c13b34</color>
 </resources>
